--- a/src/Ecommerce.CheckoutService.Application/Ecommerce.CheckoutService.Application.csproj
+++ b/src/Ecommerce.CheckoutService.Application/Ecommerce.CheckoutService.Application.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
