--- a/src/Ecommerce.CheckoutService.Infrastructure/Ecommerce.CheckoutService.Infrastructure.csproj
+++ b/src/Ecommerce.CheckoutService.Infrastructure/Ecommerce.CheckoutService.Infrastructure.csproj
@@ -10,11 +10,21 @@
 
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.CheckoutService.Application\Ecommerce.CheckoutService.Application.csproj" />
     <ProjectReference Include="..\Ecommerce.CheckoutService.Domain\Ecommerce.CheckoutService.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DbConfiguration\" />
   </ItemGroup>
 
 </Project>
